--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     kapt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'gun0912.ted:tedpermission:1.0.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 
 repositories {
